welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:15: error: ';' expected but 'else' found.
	} else {
          ^SnakeBuggle:37: error: Unmatched closing brace '}' ignored here
}
^