welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
	baisseBrosse()
	def positionFinale():Boolean= {
	if (estFaceMur() && getDirection()==Direction.WEST) {
		droite();
		if (estFaceMur()) {
			return true
		}
	} else if (estFaceMur() && getDirection()==Direction.EAST) {
		gauche();
		if (estFaceMur()) {
			return true
		}
		}
	} else {
		return false
	}
}
	
	while (!positionFinale()) {
		if (estFaceMur()) {
			if (getDirection()==Direction.WEST) {
				droite();
				avance();
				droite();
			} else {
				gauche();
				avance();
				gauche();
			}
		} else {
			avance();
		}
	}
}